# optopsy-mcp

./: .dockerignore  .gitignore  AUDIT.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  REFACTORING.md  REVIEW.md  TECH_DEBT.md  plan.md
.cargo-husky/hooks/: pre-push
.githooks/: pre-push
.github/instructions/: code-review.instructions.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE_REVIEW_AND_REFACTOR_PLAN.md  MULTI_SYMBOL_IMPLEMENTATION.md  backtesting-capability-assessment.md  benchmark-vs-optopsy.md  formula-indicator-extraction.md  position-sizing.md  signal-composition-expansion.md  signal-presets.md  tech-debt-audit.md  tool-roadmap.md  unused-rust-ti-indicators.md
examples/: benchmark.rs
migrations/: V1__add_source_and_thread_id.sql  V1__initial_schema.sql  V3__walk_forward.sql  V4__add_wf_window_results.sql  V5__add_permutation_columns.sql  V6__forward_test.sql  V7__unique_strategy_name.sql
scripts/: DSL_SCRIPTING_REFERENCE.md  SCRIPTING_REFERENCE.md  TRADING_DSL.md  profiles.toml
scripts/strategies/: bb_mean_reversion.rhai  bb_mean_reversion.trading  ibs_mean_reversion.rhai  ibs_mean_reversion.trading  iron_condor.rhai  iron_condor_income.trading  mean_reversion_pairs.trading  mean_reversion_spread.rhai  mean_reversion_spread.trading  rsi_mean_reversion_procedural.trading  short_put.rhai  sma200_threshold.rhai  sma200_threshold.trading  sma_crossover.trading  staggered_put_ladder.trading  wheel.rhai  wheel.trading
src/: bootstrap.rs  constants.rs  lib.rs  main.rs  server.rs
src/application/: backtests.rs  error.rs  mod.rs  pipeline.rs  sweeps.rs  tasks.rs  workflows.rs
src/data/: adjustment_store.rs  backtest_store.rs  cache.rs  chat_store.rs  database.rs  eodhd.rs  forward_test_store.rs  mod.rs  parquet.rs  postgres.rs  run_store.rs  strategy_store.rs  sweep_store.rs  traits.rs
src/engine/: adjustments.rs  bayesian.rs  core.rs  evaluation.rs  event_sim.rs  exits.rs  filters.rs  hmm.rs  hypothesis.rs  metrics.rs  mod.rs  multiple_comparisons.rs  ohlcv.rs  output.rs  permutation.rs  portfolio.rs  positions.rs  price_table.rs  pricing.rs  rules.rs  sim_types.rs  simulator.rs  sizing.rs  stock_sim.rs  suggest.rs  sweep.rs  sweep_analysis.rs  types.rs  vectorized_sim.rs  walk_forward.rs  wheel_sim.rs
src/scripting/: engine.rs  helpers.rs  indicators.rs  macros.rs  mod.rs  options_cache.rs  registration.rs  stdlib.rs  tests.rs  types.rs
src/server/: mod.rs  params.rs  router.rs  sanitize.rs  state.rs  task_manager.rs
src/signals/: builders.rs  catalog.rs  combinators.rs  custom.rs  helpers.rs  hmm_rewrite.rs  indicators.rs  mod.rs  momentum.rs  overlap.rs  price.rs  registry.rs  spec.rs  storage.rs  trend.rs  volatility.rs  volume.rs
src/stats/: correlation.rs  (+5 more)
tests/: adjustment_factors.rs  backtest_adjustments.rs  backtest_api.rs  backtest_exits.rs  backtest_paths.rs  bayesian_benchmark.rs  bayesian_optimize.rs  chat_api.rs  compare_strategies_signals.rs  compare_trade_log.rs  cross_symbol_exit.rs  dsl_integration.rs  dsl_parity.rs  edge_cases.rs  entry_filters.rs  event_sim_engine.rs  hmm_signal.rs  hypothesis.rs  mcp_server.rs  multi_symbol.rs  next_bar_execution.rs  options_backtest_engine.rs  parameter_sweep.rs  perf_benchmarks.rs  permutation_gate.rs  permutation_test.rs  pipeline.rs  portfolio.rs  script_bb_mean_reversion.rs  script_sma200_threshold.rs  script_wheel.rs  slippage_models.rs  split_covered_call.rs  stock_backtest.rs  stock_sim_engine.rs  strategy_coverage.rs  strategy_crud.rs  sweep_benchmark.rs  sweep_benchmark_compat.rs  task_api.rs  (+2 more)
(+144 files in other folders)
