[package]
name = "optopsy-mcp"
version = "0.1.0"
edition = "2021"
description = "Options backtesting engine exposed as an MCP server"

[dependencies]
rmcp = { version = "0.17", features = ["server", "transport-io", "transport-streamable-http-server", "macros"] }
axum = "0.8"
polars = { version = "0.53", features = ["lazy", "parquet", "dtype-date", "dtype-datetime", "dtype-struct", "round_series", "is_in", "cum_agg", "rolling_window", "abs", "cross_join", "ewma"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust_ti = "2.2"
garde = { version = "0.22", features = ["derive", "regex"] }
rand = "0.9"
ordered-float = "4"
rustc-hash = "2"
shellexpand = "3"
async-trait = "0.1"
statrs = "0.18"
nalgebra = { version = "0.33", default-features = false, features = ["std"] }
rhai = { version = "1", features = ["sync"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Controlled numeric casts throughout (day counts, indices, etc.)
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"

[dev-dependencies]
tempfile = "3.26.0"
rmcp = { version = "0.17", features = ["client", "transport-async-rw"] }
